--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -76,7 +76,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:textSize="18sp"
+        android:text="@string/points_remaining"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="@+id/secondPlayerNameTextView"
         app:layout_constraintStart_toStartOf="@+id/firstPlayerNameTextView"
         app:layout_constraintTop_toBottomOf="@+id/firstPlayerNameTextView" />
