--- a/app/src/main/res/layout/fragment_player_detail.xml
+++ b/app/src/main/res/layout/fragment_player_detail.xml
@@ -3,8 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.StartNewMatchFragment">
+    tools:context=".fragments.PlayerDetailFragment">
 
-
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Player Detail Fragment" />
 
 </FrameLayout>
