--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#01579B</color>
     <color name="colorPrimaryDark">#002f6c</color>
     <color name="colorAccent">#4f83cc</color>
+
+    <color name="colorSecondary">#f57c00</color>
+    <color name="colorSecondaryDark">#bb4d00</color>
+    <color name="colorSecondaryAccent">#ffad42</color>
 </resources>
