--- a/app/src/main/res/layout-land/activity_match.xml
+++ b/app/src/main/res/layout-land/activity_match.xml
@@ -14,7 +14,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +126,7 @@
         app:layout_constraintStart_toEndOf="@+id/firstPlayerScoreTextView" />
 
 
-    <GridLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/snookerballLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -136,161 +135,176 @@
         android:layout_marginEnd="16dp"
         android:columnCount="5"
         android:rowCount="2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/firstPlayerNameTextView"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintVertical_bias="1.0">
 
-        <LinearLayout
-            android:id="@+id/foulAndUndoLinearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/foulButton"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:layout_marginStart="16dp"
-                android:onClick="toggleFoul"
-                android:text="@string/foul" />
+        <Button
+            android:id="@+id/foulButton"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:onClick="toggleFoul"
+            android:text="@string/foul"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/greenBallButton"
+            app:layout_constraintStart_toStartOf="@+id/brownBallButton"
+            app:layout_constraintTop_toBottomOf="@+id/blueBallButton" />
 
-            <Button
-                android:id="@+id/undoButton"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_marginEnd="16dp"
-                android:onClick="undoTapped"
-                android:text="@string/undo" />
-
-        </LinearLayout>
+        <Button
+            android:id="@+id/undoButton"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:onClick="undoTapped"
+            android:text="@string/undo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/redBallButton"
+            app:layout_constraintStart_toStartOf="@+id/greenBallButton"
+            app:layout_constraintTop_toBottomOf="@+id/brownBallButton" />
 
         <ImageButton
             android:id="@+id/cueBallButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/cue_ball"
             android:cropToPadding="false"
             android:onClick="ballTapped"
             android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="@+id/yellowBallButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/yellowBallButton"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/cueball" />
 
         <ImageButton
             android:id="@+id/yellowBallButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill_horizontal|fill_vertical"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/yellow_ball"
             android:cropToPadding="false"
             android:foregroundGravity="center_vertical"
             android:onClick="ballTapped"
             android:scaleType="fitCenter"
+            app:layout_constraintBottom_toTopOf="@+id/blackBallButton"
+            app:layout_constraintEnd_toStartOf="@+id/cueBallButton"
+            app:layout_constraintStart_toEndOf="@+id/greenBallButton"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/yellowball" />
 
         <ImageButton
             android:id="@+id/greenBallButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/green_ball"
             android:cropToPadding="false"
             android:onClick="ballTapped"
             android:scaleType="fitCenter"
+            app:layout_constraintBottom_toTopOf="@+id/redBallButton"
+            app:layout_constraintEnd_toStartOf="@+id/yellowBallButton"
+            app:layout_constraintStart_toEndOf="@+id/brownBallButton"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/greenball" />
 
         <ImageButton
             android:id="@+id/brownBallButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/brown_ball"
             android:cropToPadding="false"
             android:onClick="ballTapped"
             android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="@+id/greenBallButton"
+            app:layout_constraintEnd_toStartOf="@+id/greenBallButton"
+            app:layout_constraintStart_toEndOf="@+id/blueBallButton"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/brownball" />
 
         <Button
             android:id="@+id/endOfTurnButton"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
             android:onClick="endOfTurnTapped"
             android:text="@string/end_of_turn"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/brownBallButton"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/pinkBallButton"
+            app:layout_constraintTop_toBottomOf="@+id/blueBallButton"
+            app:layout_constraintVertical_bias="1.0" />
 
         <ImageButton
             android:id="@+id/redBallButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/red_ball"
             android:cropToPadding="false"
             android:onClick="ballTapped"
             android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/cueBallButton"
+            app:layout_constraintStart_toStartOf="@+id/yellowBallButton"
+            app:layout_constraintTop_toBottomOf="@+id/greenBallButton"
             app:srcCompat="@drawable/redball" />
 
         <ImageButton
             android:id="@+id/blackBallButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/black_ball"
             android:cropToPadding="false"
             android:onClick="ballTapped"
             android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/cueBallButton"
+            app:layout_constraintStart_toStartOf="@+id/cueBallButton"
+            app:layout_constraintTop_toBottomOf="@+id/yellowBallButton"
             app:srcCompat="@drawable/blackball" />
 
         <ImageButton
             android:id="@+id/pinkBallButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/pink_ball"
             android:cropToPadding="false"
             android:onClick="ballTapped"
             android:scaleType="fitCenter"
+            app:layout_constraintBottom_toTopOf="@id/endOfTurnButton"
+            app:layout_constraintEnd_toStartOf="@+id/blueBallButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/blueBallButton"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/pinkball" />
 
         <ImageButton
             android:id="@+id/blueBallButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="@string/blue_ball"
             android:cropToPadding="false"
             android:onClick="ballTapped"
             android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="@+id/greenBallButton"
+            app:layout_constraintEnd_toStartOf="@+id/brownBallButton"
+            app:layout_constraintStart_toEndOf="@id/pinkBallButton"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@drawable/blueball" />
 
-    </GridLayout>
-
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
